--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "User Manage App",
+    "name": "angularjs-test",
     "private": true,
     "version": "0.0.0",
     "description": "A starter project for AngularJS",
